Update mail content.

--- a/update-password-event-listener/src/main/resources/templates/update-password-email.html
+++ b/update-password-event-listener/src/main/resources/templates/update-password-email.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to Our Service!</title>
+    <title>Your MARS password has changed.</title>
 </head>
 <body>
-    <h1>Welcome to Our Service!</h1>
     <p>Dear {{ firstName }},</p>
-    <p>We're glad to have you. Please let us know if you need any assistance.</p>
+    <p>Your MARS password has changed.</p>
+    <p>If you received this message in error, please contact your eIQAP LS service representative immediately and inform the administrator.</p>
     <p>Best regards,<br/>The Team</p>
 </body>
 </html>
