--- a/update-password-event-listener/src/main/resources/templates/update-password-email.html
+++ b/update-password-event-listener/src/main/resources/templates/update-password-email.html
@@ -7,7 +7,7 @@
 <body>
     <p>Dear {{ firstName }},</p>
     <p>Your MARS password has changed.</p>
-    <p>If you received this message in error, please contact your eIQAP LS service representative immediately and inform the administrator.</p>
+    <p>If you received this message in error, please contact your service representative immediately and inform the administrator.</p>
     <p>Best regards,<br/>The Team</p>
 </body>
 </html>
